--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light"> 
-    <link rel="stylesheet" href="./styles/variables.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="./styles/dark.css">
-    <link rel="stylesheet" media="(prefers-color-scheme: light)" href="./styles/light.css"> 
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
     <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="decoration-position">
-        <span class="decoration" aria-hidden="true">REC</span>
-        <div class="circle"></div>
-      </div>
+      <span class="decoration" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -51,28 +49,28 @@
         no focus
       </h1>
       <div class="title-position">
-        <h2 class="title-decor">Что делать, когда не можешь делать ничего
+        <p class="title-decor">Что делать, когда не можешь делать ничего
           <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-        </h2>
+        </p>
       </div>
     </header>
     <main class="main">
       <section class="section">
         <h2 class="bold-title">Почему сосредоточиться так сложно</h2>
-        <div class="article-size">
-          <article class="article">
-            <h3 class="title-decor">Многозадачность</h3>
-            <p class="paragraph">
-              Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/" class="link-shadow">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
-            </p>
-          </article>
-          <article class="article">
-            <h3 class="title-decor">Дофамин</h3>
-            <p class="paragraph">
-              С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
-            </p>
-          </article>
-        </div>
+          <div class="article-size">
+            <article class="article">
+              <h3 class="title-decor">Многозадачность</h3>
+              <p class="paragraph">
+                Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/" class="link-shadow">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+              </p>
+            </article>
+            <article class="article">
+              <h3 class="title-decor">Дофамин</h3>
+              <p class="paragraph">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
+              </p>
+            </article>
+          </div>
       </section>
       <section class="section">
         <div class="articles-position">
@@ -100,42 +98,42 @@
         </div>
       </section>
       <section class="section">
-        <header class="section-header">
-        <h2 class="bold-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        </header>
-        <div>
-          <h2 class="title-decor">5 простых (на самом деле не очень) советов</h2>
-          <article class="article">
-            <h3 class="normal-title">Представьте небо и облака</h3>
-            <p class="paragraph">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
-            </p>
-          </article>
-          <article class="article">
-            <h3 class="normal-title">Включите музыку</h3>
-            <p class="paragraph">
-              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
-            </p>
-          </article>
-          <article class="article">
-            <h3 class="normal-title">Прогуляйтесь</h3>
-            <p class="paragraph">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#0" class="link-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-            </p>
-          </article>
-          <article class="article">
-            <h3 class="normal-title">Хорошо ешьте</h3>
-            <p class="paragraph">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
-            </p>
-          </article>
-          <article class="article">
-            <h3 class="normal-title">Читайте</h3>
-            <p class="paragraph">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
-            </p>
-          </article>
-        </div>
+        <h2 class="bold-title section-header">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <article class="article-size">
+          <h3 class="title-decor">5 простых (на самом деле не очень) советов</h3>
+          <ul>
+            <li class="article">
+              <h4 class="normal-title">Представьте небо и облака</h4>
+              <p class="paragraph">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="article">
+              <h4 class="normal-title">Включите музыку</h4>
+              <p class="paragraph">
+                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="article">
+              <h4 class="normal-title">Прогуляйтесь</h4>
+              <p class="paragraph">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#0" class="link-shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </li>
+            <li class="article">
+              <h4 class="normal-title">Хорошо ешьте</h4>
+              <p class="paragraph">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              </p>
+            </li>
+            <li class="article">
+              <h4 class="normal-title">Читайте</h4>
+              <p class="paragraph">
+                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </article>
       </section>
       <section class="section images-section">
         <h2 class="title-decor">А можно в картинках?</h2>
@@ -146,10 +144,10 @@
         <img src="./images/street.png" alt="Японская улица" class="images" loading="lazy">
       </section>
     </main>
-    <footer class="footer">
-      <h1 class="footer-title">
+    <footer class="footer decorated-zone">
+      <h2 class="footer-title">
         focus
-      </h1>
+      </h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
